# redis-async-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust-clippy.yml  rust.yml
benches/: benchmarks.rs
examples/: monitor.rs  psubscribe.rs  pubsub.rs  realistic.rs  subscribe.rs
src/: client.rs  error.rs  lib.rs  reconnect.rs  resp.rs  task.rs
src/client/: builder.rs  connect.rs  mod.rs  paired.rs  pubsub.rs  reconnect.rs
src/client/builder/: mod.rs  redis.rs  sentinel.rs
src/client/connect/: async_std.rs  mod.rs
src/client/pubsub/: inner.rs  mod.rs
src/client/reconnect/: holder.rs  mod.rs
src/protocol/: mod.rs  resp.rs
src/protocol/codec/: decode.rs  encode.rs  mod.rs
src/protocol/codec/tokio/: decode.rs  encode.rs  mod.rs
