[package]
name = "redis-async"
version = "0.14.0"
authors = ["Ben Ashford <benashford@users.noreply.github.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = "An asynchronous futures based Redis client for Rust using Tokio"
repository = "https://github.com/benashford/redis-async-rs"
keywords = ["redis", "tokio"]
edition = "2021"

[dependencies]
bytes = "1.0"
futures-channel = "^0.3.7"
futures-sink = "^0.3.7"
futures-util = { version = "^0.3.7", features = ["sink"] }
log = "^0.4.11"
native-tls = { version = "0.2", optional = true }
pin-project = "1.0"
tokio = { version = "1.0", features = ["rt", "net", "time"] }
tokio-native-tls = { version = "0.3.0", optional = true }
tokio-rustls = { version = "0.23.4", optional = true }
tokio-util = { version = "0.7", features = ["codec"] }
webpki-roots = {version = "0.22.5", optional = true }

[features]
default = []
tls = ["webpki-roots"]
with-rustls = ["tokio-rustls", "tls"]
with-native-tls = ["native-tls", "tokio-native-tls", "tls"]


[dev-dependencies]
env_logger = "^0.9"
futures = "^0.3.7"
tokio = { version = "1.0", features = ["full"] }
